# bhasha-compiler

./: .gitignore  ARCHITECTURE.md  BUILDING_AND_TESTING.md  CMakeLists.txt  QUICK_START.md  README.md
examples/: hello.bhasha  variables.bhasha
include/: ast.h  code_generator.h  lexer.h  parser.h  semantic_analyzer.h  symbol_table.h  token.h
src/: ast.cpp  code_generator.cpp  lexer.cpp  main.cpp  parser.cpp  semantic_analyzer.cpp  symbol_table.cpp
